--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "gradient background color generator",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "browserify script.js > bundle.js && live-server"
   },
   "repository": {
     "type": "git",
